<?xml version="1.0"?>
<package format="3">
  <name>livox_to_pointcloud2</name>
  <version>0.0.0</version>
  <description>The livox_to_pointcloud2 package</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>